Basic Views And Urls, (From User Management and announcment project template)

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="sm:flex sm:items-center sm:justify-between">
         <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© {% now 'Y' %} <a
                 href="https://bgopc.github.io"
-                class="hover:underline">Tisno™</a>. All Rights Reserved.
+                class="hover:underline">MiniCodes™</a>. All Rights Reserved.
         </span>
         <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
             <a href="https://twitter.com/BehradOpc" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
