Updated The usl reverse in password_reset file

--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -54,7 +54,7 @@ Password Reset
                         </div>
                         <div class="py-3 px-6 bg-gray-200 border-t-1 border-gray-300 text-center">
                             <div class="text-xs">
-                                <a href="{% url 'users-register' %}">Create A New Account</a><br><br>
+                                <a href="{% url 'register' %}">Create A New Account</a><br><br>
                                 <a href="{% url 'login' %}">Back To Login</a><br>
                             </div>
                         </div>
