smpt info added, password reset template changed

--- a/users/templates/users/password_reset_email.html
+++ b/users/templates/users/password_reset_email.html
@@ -1,12 +1,66 @@
 {% autoescape off %}
-  To initiate the password reset process for your {{ user.email }} Tisno Account Registration/Login App Account,
-  click the link below:
+{% load i18n %}
 
-  {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>{{ site_name }} - Password Reset</title>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 16px;
+      line-height: 1.5;
+      color: #333333;
+    }
 
-  If clicking the link above doesn't work, please copy and paste the URL in a new browser
-  window instead.
+    h1 {
+      margin: 0;
+      font-size: 24px;
+      font-weight: bold;
+      color: #333333;
+      line-height: 1.5;
+    }
 
-  Sincerely,
-  The Tisno Team
+    p {
+      margin: 0 0 1.5em;
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <table width="100%" border="0" cellspacing="0" cellpadding="0" style="background-color: #f8f8f8;">
+    <tr>
+      <td align="center" valign="top">
+        <table width="600" border="0" cellspacing="0" cellpadding="0" style="background-color: #ffffff;">
+          <tr>
+            <td align="center" valign="top" style="padding: 40px 20px;">
+              <h1>{{ site_name }} - Password Reset</h1>
+            </td>
+          </tr>
+          <tr>
+            <td align="left" valign="top" style="padding: 20px;">
+              <p>Hello {{ user.username }},</p>
+              <p>We received a request to reset your account password. If you didn't make this request, please ignore this email.</p>
+              <p>To reset your password, click the following link:</p>
+              <p><a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}}</a></p>
+              <p>Please note that this link is only valid for {{ timeout }} hours.</p>
+              <p>If you have any questions or concerns, please contact our support team at <a href="mailto:bb8933400@gmail.com">{{ domain }}</a>.</p>
+              <p>Thanks,<br>{{ site_name }}</p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
 {% endautoescape %}
