--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,20 +1,18 @@
 {% extends '_layout.html' %}
 {% block title %}
-    register
+    Register to MiniCodes
 {% endblock %}
 {% block content %}
-    <form
-            method="post"
-            id="signupForm"
-            class="bg-slate-400 w-1/2 mx-auto items-center justify-center px-5 border-2 border-gray-900 py-3 rounded-3 h-100 my-4"
-    >
+    <form method="post" id="signupForm"
+          class="bg-slate-400 w-1/2 mx-auto items-center justify-center px-5 border-2 border-gray-900 py-3 rounded-3 h-100 my-4"
+          enctype="multipart/form-data">
         {% csrf_token %}
         <div>
-            <label class="block text-center font-weight-bold text-lg">FirstName</label>
+            <label class="block text-center font-weight-bold text-lg">First Name</label>
             {{ form.first_name }}
         </div>
         <div>
-            <label class="block text-center font-weight-bold text-lg">LastName</label>
+            <label class="block text-center font-weight-bold text-lg">Last Name</label>
             {{ form.last_name }}
         </div>
         <div>
@@ -24,44 +22,24 @@
         <div>
             <label class="block text-center font-weight-bold text-lg">Phone Number</label>
             {{ form.phone }}
-            {% if form.phone.error_messages %}
-                <small class="text-red-400">
-                    {{ form.phone.error_messages }}
-                </small>
-            {% endif %}
         </div>
         <div>
             <label class="block text-center font-weight-bold text-lg">Password</label>
             {{ form.password1 }}
-            {% if form.password1.error_messages %}
-                <small class="text-red-400">
-                    {{ form.password1.error_messages }}
-                </small>
-            {% endif %}
         </div>
         <div>
-            <label class="block text-center font-weight-bold text-lg"
-            >Password Confirmation</label
-            >
+            <label class="block text-center font-weight-bold text-lg">Repeat Password</label>
             {{ form.password2 }}
-            {% if form.password2.error_messages %}
-                <small class="text-red-400">
-                    {{ form.password2.error_messages }}
-                </small>
-            {% endif %}
         </div>
-        <div class="flex items-baseline justify-center">
-            <a
-                    href="{% url 'login' %}"
-                    class="text-decoration-none text-gray-800 hover:text-gray-900 font-bold py-2 px-4 rounded"
-            >
-                Have an account? Login
-            </a>
+        <div>
+            <label class="block text-center font-weight-bold text-lg">Profile Picture</label>
+            {{ form.profile }}
         </div>
-        <div class="flex items-baseline justify-center">
-            <input type="submit" value="Register"
-                   class="px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900"
-            >
+        <div class="text-center">
+            <button type="submit"
+                    class="bg-gray-900 text-white active:bg-gray-700 uppercase text-sm font-bold px-6 py-3 rounded shadow hover:bg-gray-800 outline-none focus:outline-none mr-1 mb-1 w-1/4">
+                Register
+            </button>
         </div>
     </form>
 {% endblock %}
