Editing file titles

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,6 +1,6 @@
 {% extends '_layout.html' %}
 {% block title %}
-    login
+    LogIn to Your Minicodes Account
 {% endblock %}
 {% block content %}
     <form
