--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -1,6 +1,6 @@
 {% extends '_layout.html' %}
 {% block title %}
-Password Reset
+Reset Your Minicodes Password
 {% endblock %}
 {% block content %}
     <div class="form-content my-3 p-6">
