edited the miss named attribute
I used  instead of

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -35,7 +35,7 @@
                     <span class="mr-2">Logged in as BGOPC</span>
                     <img
                             class="h-8 w-8 rounded-full"
-                            src="{{ user.image.url }}"
+                            src="{{ user.profile.url }}"
                             alt="{{ user.nickname|add:"Profile Image" }}"
                     />
                 </div>
