--- a/codeisc/templates/codeisc/includes/question.html
+++ b/codeisc/templates/codeisc/includes/question.html
@@ -1,8 +1,12 @@
-{% extends '_layout.html' %}
-{% block title %}
-{{ question.short_description }}
-{% endblock title %}
-
-{% block content %}
-<h1>QUESTION</h1>
-{% endblock %}
+<div class="bg-white p-4 rounded-lg shadow">
+    <h2 class="text-2xl font-bold">{{ question.short_description }}</h2>
+    <p class="text-gray-600">{{ question.description|truncatechars:100 }}</p>
+    <div class="flex items-center text-gray-500 mt-2">
+        <div class="mr-2">{{ question.created_at|date:"F j, Y" }}</div>
+        <img
+                class="h-6 w-6 rounded-full"
+                src="{{ question.author.profile.url }}"
+                alt="{{ question.author.username }} profile picture"
+        />
+    </div>
+</div>
