--- a/codeisc/templates/codeisc/codes_page.html
+++ b/codeisc/templates/codeisc/codes_page.html
@@ -1,8 +1,52 @@
 {% extends '_layout.html' %}
 {% block title %}
-MiniCodes
+    MiniCodes
 {% endblock title %}
 
 {% block content %}
-<h1>CodePage</h1>
-{% endblock %}
+    <div class="container mx-auto py-8">
+        <h1 class="text-3xl font-bold mb-4">Codes</h1>
+
+        {% for code in codes %}
+            {% include 'codeisc/includes/code.html' with code=code %}
+        {% empty %}
+            <p class="text-gray-600">No codes found.</p>
+        {% endfor %}
+
+        <div class="flex justify-center items-center mt-4">
+            {% if is_paginated %}
+                <ul class="flex space-x-2">
+                    {% if page_obj.has_previous %}
+                        <li>
+                            <a href="?page=1" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded">&laquo; First</a>
+                        </li>
+                        <li>
+                            <a href="?page={{ page_obj.previous_page_number }}" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded">Previous</a>
+                        </li>
+                    {% endif %}
+
+                    {% for page in paginator.page_range %}
+                        {% if page_obj.number == page %}
+                            <li>
+                                <a href="?page={{ page }}" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded is-current">{{ page }}</a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="?page={{ page }}" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded">{{ page }}</a>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+
+                    {% if page_obj.has_next %}
+                        <li>
+                            <a href="?page={{ page_obj.next_page_number }}" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded">Next</a>
+                        </li>
+                        <li>
+                            <a href="?page={{ page_obj.paginator.num_pages }}" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded">&raquo; Last</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            {% endif %}
+        </div>
+    </div>
+{% endblock content %}
