--- a/codeisc/templates/codeisc/code_page.html
+++ b/codeisc/templates/codeisc/code_page.html
@@ -1,8 +1,20 @@
-{% extends '_layout.html' %}
+{% extends "_layout.html" %}
 {% block title %}
-MiniCodes
-{% endblock title %}
+    MiniCodes - View Code
+{% endblock %}
+{% load syntax_highlight %}
 
 {% block content %}
-<h1>CodePage</h1>
+    <div class="flex flex-col items-center justify-center h-screen">
+        <div class="max-w-3xl w-full">
+            <div class="bg-white shadow-lg p-6">
+                <h1 class="text-xl font-semibold mb-4">{{ code.short_description }}</h1>
+                <div class="mb-4">
+                    <pre>{{ code.code_text|syntax_highlight:code.type }}</pre>
+                </div>
+                <p class="text-sm text-gray-500">Author: {{ code.author }}</p>
+                <p class="text-sm text-gray-500">Created at: {{ code.created_at }}</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
