--- a/codeisc/templates/codeisc/create_answer_page.html
+++ b/codeisc/templates/codeisc/create_answer_page.html
@@ -20,7 +20,7 @@
             {{ form.code }}
         </div>
         <div class="flex items-center justify-center">
-            <input type="submit" value="Create Question"
+            <input type="submit" value="Answer The Question"
                    class="bg-gray-200 hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
         </div>
     </form>
