--- a/codeisc/templates/codeisc/create_code_page.html
+++ b/codeisc/templates/codeisc/create_code_page.html
@@ -1,6 +1,6 @@
 {% extends '_layout.html' %}
 {% block title %}
-MiniCodes - Create a code
+MiniCodes - Share a code
 {% endblock %}
 {% block content %}
     <form method="post" id="codeCreateForm" class="bg-gray-200 w-1/2 mx-auto items-center justify-center px-5 border-2 border-red-500 py-3 rounded my-4">
@@ -18,7 +18,7 @@ MiniCodes - Create a code
             {{ form.type }}
         </div>
         <div class="flex items-center justify-center">
-            <input type="submit" value="Create Code" class="bg-gray-200 hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
+            <input type="submit" value="Post A Code" class="bg-gray-200 hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
         </div>
     </form>
 {% endblock %}
