--- a/codeisc/templates/codeisc/create_question_page.html
+++ b/codeisc/templates/codeisc/create_question_page.html
@@ -22,7 +22,7 @@
             {{ form.code }}
         </div>
         <div class="flex items-center justify-center">
-            <input type="submit" value="Create Question"
+            <input type="submit" value="Ask A Question"
                    class="bg-gray-200 hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
         </div>
     </form>
