--- a/codeisc/templates/codeisc/question_page.html
+++ b/codeisc/templates/codeisc/question_page.html
@@ -1,8 +1,29 @@
 {% extends '_layout.html' %}
 {% block title %}
-MiniCodes
+    MiniCodes
 {% endblock title %}
 
 {% block content %}
-<h1>questionPage</h1>
+    <div class="container mx-auto py-6">
+        <h1 class="text-4xl font-bold">{{ question.short_description }}</h1>
+        <p class="my-4">{{ question.description }}</p>
+        <div class="mt-4">
+            {% for code in question.code.all %}
+                {% include 'codeisc/includes/code.html' with code=code %}
+            {% endfor %}
+        </div>
+
+        <div class="mt-6 bg-white p-4 rounded-lg">
+            <p class="text-sm font-semibold">Author: <a href="{{ question.author.profile.url }}"
+                                                        class="text-blue-500">{{ question.author.username }}</a></p>
+            <p class="text-sm">Created at: {{ question.created_at|date:"F j, Y" }}</p>
+        </div>
+        <h2 class="text-2xl font-bold mt-6">Answers</h2>
+        <div class="mt-4">
+            {% for answer in answers %}
+                {% include 'codeisc/includes/answer.html' with answer=answer %}
+
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
