Fixed Missing Form Field, Fixed SyntaxHighlighting

--- a/codeisc/templates/codeisc/code_page.html
+++ b/codeisc/templates/codeisc/code_page.html
@@ -2,7 +2,7 @@
 {% block title %}
     MiniCodes - View Code
 {% endblock %}
-{% load syntax_highlight %}
+{% load pygmentify_tags %}
 
 {% block content %}
     <div class="flex flex-col items-center justify-center h-screen">
@@ -10,9 +10,12 @@
             <div class="bg-white shadow-lg p-6">
                 <h1 class="text-xl font-semibold mb-4">{{ code.short_description }}</h1>
                 <div class="mb-4">
-                    <pre>{{ code.code_text|syntax_highlight:code.type }}</pre>
+                    {% pygmentify %}
+                        <pre class="{{ code_language }} code-block bg-gray-200 rounded-lg p-2">{{ code.code_text }}
+                    </pre>
+                    {% endpygmentify %}
                 </div>
-                <p class="text-sm text-gray-500">Author: {{ code.author }}</p>
+                <p class="text-sm text-gray-500">Author: {{ code.author.username }}</p>
                 <p class="text-sm text-gray-500">Created at: {{ code.created_at }}</p>
             </div>
         </div>
