--- a/codeisc/templates/codeisc/home_page.html
+++ b/codeisc/templates/codeisc/home_page.html
@@ -25,7 +25,7 @@
                     </li>
                     <li>
                         <a
-                                href="#"
+                                href="{% url 'CreateQuestion' %}"
                                 class="bg-slate-100 block text-gray-600 hover:text-teal-500 p-2 m-2 rounded-md"
                         >Ask a Question</a
                         >
@@ -39,7 +39,7 @@
                     </li>
                     <li>
                         <a
-                                href="#"
+                                href="{% url 'CreateCode' %}"
                                 class="bg-slate-100 block text-gray-600 hover:text-teal-500 p-2 m-2 rounded-md"
                         >Share a Code</a
                         >
