--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static pygmentify_tags %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
     <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
+    <link rel="stylesheet" href="{% pygmentify_css %}">
     <title>{% block title %}
         MiniCodes
     {% endblock title %}</title>
