--- a/codeisc/templates/codeisc/create_code_page.html
+++ b/codeisc/templates/codeisc/create_code_page.html
@@ -6,6 +6,10 @@ MiniCodes - Share a code
     <form method="post" id="codeCreateForm" class="bg-gray-200 w-1/2 mx-auto items-center justify-center px-5 border-2 border-red-500 py-3 rounded my-4">
         {% csrf_token %}
         <div class="mb-4">
+            <label class="block text-center font-bold text-lg mb-2">Short Description</label>
+            {{ form.short_description }}
+        </div>
+        <div class="mb-4">
             <label class="block text-center font-bold text-lg mb-2">Description</label>
             {{ form.description }}
         </div>
