--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,29 +1,32 @@
+{% load static %}
 <header class="bg-teal-500 py-4">
     <div class="container mx-auto flex items-center justify-between">
-        <div class="flex items-center">
-            <button class="text-white focus:outline-none">
-                <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        class="h-6 w-6"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor"
-                >
-                    <path
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16"
-                    ></path>
-                </svg>
-            </button>
-            <img
-                    class="h-8 ml-2"
-                    src="../static/favicon/favicon-32x32.png"
-                    alt="MiniCodes Logo"
-            />
-            <div class="ml-4 text-white">MiniCodes</div>
-        </div>
+        <a href="{% url 'home' %}">
+            <div class="flex items-center">
+                <button class="text-white focus:outline-none">
+                    <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke="currentColor"
+                    >
+                        <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                stroke-width="2"
+                                d="M4 6h16M4 12h16M4 18h16"
+                        ></path>
+                    </svg>
+                </button>
+                <img
+                        class="h-8 ml-2"
+                        src="{% static 'favicon/favicon-32x32.png' %}"
+                        alt="MiniCodes Logo"
+                />
+                <div class="ml-4 text-white">MiniCodes</div>
+            </div>
+        </a>
         <div class="flex items-center flex-grow m-2">
             <input
                     type="text"
@@ -40,14 +43,16 @@
                     />
                 </div>
             {% else %}
-                <div class="ml-4 flex items-center text-white">
-                    <span class="mr-2">Not Logged In</span>
-                    <img
-                            class="h-8 w-8 rounded-full"
-                            src="https://www.seekpng.com/png/detail/413-4139803_unknown-profile-profile-picture-unknown.png"
-                            alt="Default Profile"
-                    />
-                </div>
+                <a href="{% url 'login' %}">
+                    <div class="ml-4 flex items-center text-white">
+                        <span class="mr-2">Not Logged In</span>
+                        <img
+                                class="h-8 w-8 rounded-full"
+                                src="https://www.seekpng.com/png/detail/413-4139803_unknown-profile-profile-picture-unknown.png"
+                                alt="Default Profile"
+                        />
+                    </div>
+                </a>
             {% endif %}
 
         </div>
