language_map template tag, Question Page

--- a/codeisc/templates/codeisc/create_question_page.html
+++ b/codeisc/templates/codeisc/create_question_page.html
@@ -17,8 +17,7 @@
             {{ form.description }}
         </div>
         <div class="mb-4">
-            <label class="block text-center font-bold text-lg mb-2">Code</label>
-            <p class="text-decoration-none text-gray-800 hover:text-gray-900 font-bold py-2 px-4 rounded">Select A code</p>
+            <label class="block text-center font-bold text-lg mb-2">Select Codes</label>
             {{ form.code }}
             <a href="{% url 'CreateCode' %}" class="block m-2 text-lg text-emerald-800">Create A Code</a>
         </div>
