--- a/codeisc/templates/codeisc/question_page.html
+++ b/codeisc/templates/codeisc/question_page.html
@@ -4,8 +4,7 @@
 {% endblock title %}
 {% load language_map %}
 {% block content %}
-    <br>
-    <div class="container mx-auto p-4 bg-teal-50 rounded-lg">
+    <div class="container mx-auto my-4 p-4 bg-teal-50 rounded-lg">
         <h1 class="text-4xl font-bold">{{ question.short_description }}</h1>
         <p class="my-4">{{ question.description }}</p>
         <div class="mt-4">
