Added Description to user model

--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -20,6 +20,10 @@
             {{ form.email }}
         </div>
         <div>
+            <label class="block text-center font-weight-bold text-lg">Description</label>
+            {{ form.description }}
+        </div>
+        <div>
             <label class="block text-center font-weight-bold text-lg">Phone Number</label>
             {{ form.phone }}
         </div>
