--- a/users/templates/users/user_page.html
+++ b/users/templates/users/user_page.html
@@ -64,7 +64,7 @@
                             </div>
                             <div class="mb-2 text-blueGray-600 mt-10">
                                 <i class="fa fa-calendar mr-2 text-lg text-blueGray-400"></i>
-                                Joined Date: {{ user.date_joined|date:"F, j, Y" }}
+                                Joined at: {{ user.date_joined|date:"F, j, Y" }}
                             </div>
                         </div>
                         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
