--- a/users/templates/users/register_page.html
+++ b/users/templates/users/register_page.html
@@ -39,6 +39,14 @@
             <label class="block text-center font-weight-bold text-lg">Profile Picture</label>
             {{ form.profile }}
         </div>
+        <div class="flex items-baseline justify-center">
+            <a
+                    href="{% url 'login' %}"
+                    class="text-decoration-none text-gray-800 hover:text-gray-900 font-bold py-2 px-4 rounded"
+            >
+                Have an account? Login
+            </a>
+        </div>
         <div class="text-center">
             <button type="submit"
                     class="bg-gray-900 text-white active:bg-gray-700 uppercase text-sm font-bold px-6 py-3 rounded shadow hover:bg-gray-800 outline-none focus:outline-none mr-1 mb-1 w-1/4">
