--- a/users/templates/users/login_page.html
+++ b/users/templates/users/login_page.html
@@ -35,5 +35,9 @@
                    class="px-6 py-2 mt-4 text-white bg-blue-600 rounded-lg hover:bg-blue-900"
             >
         </div>
+    <div>
+        errors:
+        {{ form.errors }}
+    </div>
     </form>
 {% endblock %}
